--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,400,700" rel="stylesheet">
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,400,700" rel="stylesheet">
+<link rel = "stylesheet" type = "text/css" href = "style.css" />
+  <title>landingPage</title>
+</head>
 <div class="content">
   <header id="header">
   <nav class="container" id="nav-bar">
@@ -19,7 +25,7 @@
 
   <form id="form" name="email" action="https://www.freecodecamp.com/email-submit">
     <input type="email" name="email" id="email" placeholder="email address" required/>
-    <input type="submit" name="Submit" id="submit"></input>
+    <input type="submit" name="Submit" id="submit">
   </form>
 
   </section>
@@ -35,4 +41,10 @@
   </section>
 
 </body>
+
 </div>
+</html>
+
+
+
+
